# hivebotics

./: .gitignore  README.md
abluo_1_communication/: CMakeLists.txt  package.xml
abluo_1_communication/launch/: abluo_1_communication.launch
abluo_1_communication/scripts/: test_real.json  traj_planner_real.py
abluo_1_moveit_config/: .setup_assistant  CMakeLists.txt
abluo_1_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  mycobot_pro.srdf  ompl_planning.yaml  ros_controllers.yaml  ros_controllers_pid_tuning.yaml  simple_moveit_controllers.yaml
abluo_1_moveit_config/launch/: demo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  ros_controllers.launch  ros_controllers_old.launch  run_benchmark_ompl.launch  setup_assistant.launch
abluo_1_moveit_config/scripts/: sync_plan.py  test_cartesian.py
abluo_urdf_1/: CMakeLists.txt
abluo_urdf_1/config/: joint_names_Abluo_urdf_1.yaml
abluo_urdf_1/launch/: display.launch
abluo_urdf_1/meshes/: base_link.STL  bin.STL  linear_actuator.STL  refill.STL  robot_arm_mount.STL  tool_holder.STL
abluo_urdf_1/urdf/: abluo_urdf_1.csv  abluo_urdf_1.urdf
arm_plus_base_description/: CMakeLists.txt  package.xml
arm_plus_base_description/config/: rviz_config.rviz
arm_plus_base_description/launch/: display.launch
arm_plus_base_description/urdf/: abluo_urdf_1.xacro  arm_plus_base.urdf.xacro  mycobot_robot_macro.xacro
arm_plus_base_description/urdf/320_urdf/: mycobot_pro_320.urdf
communication/abluo_1_communication/: CMakeLists.txt
communication/abluo_1_communication/launch/: abluo_1_communication.launch
communication/abluo_1_communication/scripts/: test_real.json  traj_planner.py  traj_planner_real.py  traj_planner_simul.py
descriptions/abluo_urdf_1/config/: joint_names_abluo_urdf_1.yaml
descriptions/abluo_urdf_1/launch/: gazebo.launch
descriptions/abluo_urdf_1/urdf/: abluo_urdf_1.csv  abluo_urdf_1.urdf
descriptions/accessories_description/brush_swapping_stick/: CMakeLists.txt  package.xml
descriptions/arm_plus_base_description/config/: rviz_config.rviz
descriptions/arm_plus_base_description/launch/: gazebo.launch
descriptions/arm_plus_base_description/urdf/: abluo_urdf_1.xacro  arm_plus_base.gazebo.xacro  arm_plus_base.urdf.xacro  mycobot_robot_macro.xacro
descriptions/mycobot_description/urdf/: mycobot_robot.urdf.xacro  mycobot_robot_macro.xacro
docs/: misc_technical_details.md
hw_interface/abluo_control/: CMakeLists.txt  basic.rviz  package.xml
hw_interface/abluo_control/config/: controllers.yaml  trajectory_controller.yaml
hw_interface/abluo_control/include/abluo_control/: abluo_hw.h  abluo_hw_interface.h
hw_interface/abluo_control/launch/: abluo_HW_main.launch  abluo_HW_sim.launch  abluo_motion.launch
hw_interface/abluo_control/msg/: abluoTelemetry.msg  armCmd.msg
hw_interface/abluo_control/scripts/: abluo_hw_interface.py
hw_interface/abluo_control/src/: abluo_control.cpp  abluo_elipse_traj_motion.cpp  abluo_hw.cpp  abluo_hw_main.cpp  abluo_sim_echo.cpp
hw_interface/abluo_control/src/archive/: abluo_hw_interface.cpp  abluo_hw_main.cpp  abluo_sim_echo.cpp
hw_interface/linear_actuator_as/: CMakeLists.txt
hw_interface/linear_actuator_as/action/: Actuator.action  LinearActuatorActionMsg.action
hw_interface/linear_actuator_as/launch/: linear_actuator_topic.launch
hw_interface/linear_actuator_as/scripts/: arduino_controller.ino  linear_actuator_client.py  linear_actuator_server.py
hw_interface/robot_hw_interface/: CMakeLists.txt
hw_interface/robot_hw_interface/msg/: LinearActuatorPose.msg  MycobotAngles.msg  ToolUpdate.msg
hw_interface/robot_hw_interface/src/: robot_hw_interface_server.cpp
linear_actuator_as/: CMakeLists.txt  package.xml
linear_actuator_as/scripts/: linear_actuator_as.py  linear_actuator_client.py  linear_actuator_driver.ino  linear_actuator_publisher.ino  linear_actuator_server.py
moveit_configs/abluo_1_moveit_config/: .setup_assistant  package.xml
mycobot_320_moveit/config/: ros_controllers.yaml  ros_controllers_pid_tuning.yaml
mycobot_320_moveit/launch/: trajectory_execution.launch.xml
mycobot_320_moveit/scripts/: sync_plan.py  test_plan.py  test_real.json  trajectory_planning.py
mycobot_description/urdf/: mycobot_robot.sensor.xacro
planning/: CMakeLists.txt
planning/data/: bowl_inner_surface.mlp  bowl_inner_surface.ply  bowl_upper_surface.mlp  bowl_upper_surface.ply  bowl_upper_surface_only_upward_plan.ply
planning/launch/: abluo_motion.launch  test_path.launch  test_vis_exe.launch
planning/scripts/: path_planning.py  test_paths.py
planning/src/: abluo_elipse_traj_motion.cpp  test_trajectory_vis.cpp
robot_hw_interface/action/: RobotUpdate.action
robot_hw_interface/msg/: ToiletBrush.msg  WaterPump.msg
robot_hw_interface/src/: robot_hw_interface_server.cpp
simulation_models/: CMakeLists.txt  package.xml
tool_switching_mechanism/Disposable/: CMakeLists.txt  package.xml
tool_switching_mechanism/Disposable_Brush_Container/: CMakeLists.txt  package.xml
tool_switching_mechanism/Master_plate/: CMakeLists.txt  package.xml
tool_switching_mechanism/Tool_Stick_holder/: CMakeLists.txt  package.xml
tool_switching_mechanism/Tool_stick/: CMakeLists.txt  package.xml
(+84 files in other folders)
